testsuite/tests/parser/should_fail/Or1.hs
module Main where

main = g 3 && h 1

h y = case y of
  (one of 2, 3) -> True

g x = case x of
  one of 4, 5 -> False